--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,8 @@
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.6.1",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "mongoose": "^6.0.10",
+    "nodemon": "^2.0.13"
   }
 }
